--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd -f./config/dev.env nodemon src/index.js"
   },
   "author": "vishist",
   "license": "ISC",
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "jest": "^26.0.1",
+    "supertest": "^4.0.2"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
+    "multer": "^1.4.2",
+    "sharp": "^0.25.4",
     "validator": "^13.1.1"
   }
 }
