--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.2.3",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
