--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sendgrid/mail": "^7.2.3",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "geolib": "^3.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
     "multer": "^1.4.2",
